[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/placeholder_texture.png" type="Texture" id=1]
[ext_resource path="res://scripts/GoblinScript.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 45.0034
height = 40.2918

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 162.891, 61.4094 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -162.635, 3.05176e-05 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 161.927, 0.707123 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]
